# tomo-vaccination

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  tester.py
.chalice/: config.json  example.config.json
.chalice/deployed/: dev.json
aws/: ChaliceDeployIAMPolicy.json
docs/: system_diagram.puml
src/: main.py  scraper.py  slack.py
