[tool.poetry]
name = "tomo-vaccination"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
taskipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
# Run local
start = "python src/main.py"
# Run automatically test
test = "python -m pytest src/ -v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
