[tool.poetry]
name = "tomo-vaccination"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "4.9.3"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
autopep8 = "1.5.7"
flake8 = "3.9.2"
mypy = "0.910"
pylint = "2.10.2"
types-requests = "2.25.6"
taskipy = "1.8.1"
chalice = "^1.24.2"

[tool.taskipy.tasks]
# Run local
start = "python app.py"
# Run automatically test
test = "python -m pytest src/ -v"
# Output to requirements.txt
requirements = "poetry export -f requirements.txt --output requirements.txt"
# Deploy
deploy = "chalice deploy --profile tomo-vaccination"
# Cleanup
undeploy = "chalice delete --profile tomo-vaccination"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
